# philosophers

./: CMakeLists.txt
philo_one/: Makefile  init.c  init_one.c  parce.c  parce_one.c  philo_one.c  philo_one.h  simulation_one.c  string_out.c  string_out_one.c  string_process.c
philo_one/lib_func/: ft_strjoin.c  ft_strlen.c
philo_three/: Makefile  init_three.c  parce_three.c  philo_three.c  philo_three.h  simulation.c  string_out_three.c
philo_two/: Makefile  init_two.c  parce_two.c  philo_two.c  philo_two.h  sim_two.c  string_out_two.c
